# pdomain-index-pip

./: .gitignore  CLAUDE.md  CONVENTIONS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  dep-refresh.yml  regen.yml  release.yml
docs/conventions/: ignored-surfaces.md  lint-deviations.md
scripts/: do-release.sh  regen_index.py  release-common.sh  update_github_actions.py
tests/: test_dispatch_event_name.py  test_regen_index.py
